third_party/clingo/libclingo/clingo.h


typedef int32_t clingo_literal_t;
typedef uint32_t clingo_atom_t;
typedef uint32_t clingo_id_t;
typedef int32_t clingo_weight_t;
typedef struct clingo_weighted_literal {
    clingo_literal_t literal;
    clingo_weight_t weight;
} clingo_weighted_literal_t;
enum clingo_error_e {
    clingo_error_success = 0,   
    clingo_error_runtime = 1,   
    clingo_error_logic = 2,     
    clingo_error_bad_alloc = 3, 
    clingo_error_unknown = 4    
};
typedef uint64_t clingo_symbol_t;
typedef int clingo_theory_sequence_type_t;
typedef int clingo_heuristic_type_t;
typedef int clingo_external_type_t;
typedef struct clingo_backend clingo_backend_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_begin(clingo_backend_t *backend);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_end(clingo_backend_t *backend);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_rule(clingo_backend_t *backend, bool choice, clingo_atom_t const *head,
                                                   size_t head_size, clingo_literal_t const *body, size_t body_size);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_weight_rule(clingo_backend_t *backend, bool choice,
                                                          clingo_atom_t const *head, size_t head_size,
                                                          clingo_weight_t lower_bound,
                                                          clingo_weighted_literal_t const *body, size_t body_size);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_minimize(clingo_backend_t *backend, clingo_weight_t priority,
                                                       clingo_weighted_literal_t const *literals, size_t size);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_project(clingo_backend_t *backend, clingo_atom_t const *atoms,
                                                      size_t size);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_external(clingo_backend_t *backend, clingo_atom_t atom,
                                                       clingo_external_type_t type);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_assume(clingo_backend_t *backend, clingo_literal_t const *literals,
                                                     size_t size);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_heuristic(clingo_backend_t *backend, clingo_atom_t atom,
                                                        clingo_heuristic_type_t type, int bias, unsigned priority,
                                                        clingo_literal_t const *condition, size_t size);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_acyc_edge(clingo_backend_t *backend, int node_u, int node_v,
                                                        clingo_literal_t const *condition, size_t size);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_add_atom(clingo_backend_t *backend, clingo_symbol_t *symbol,
                                                       clingo_atom_t *atom);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_theory_term_number(clingo_backend_t *backend, int number,
                                                                 clingo_id_t *term_id);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_theory_term_string(clingo_backend_t *backend, char const *string,
                                                                 clingo_id_t *term_id);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_theory_term_sequence(clingo_backend_t *backend,
                                                                   clingo_theory_sequence_type_t type,
                                                                   clingo_id_t const *arguments, size_t size,
                                                                   clingo_id_t *term_id);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_theory_term_function(clingo_backend_t *backend, char const *name,
                                                                   clingo_id_t const *arguments, size_t size,
                                                                   clingo_id_t *term_id);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_theory_term_symbol(clingo_backend_t *backend, clingo_symbol_t symbol,
                                                                 clingo_id_t *term_id);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_theory_element(clingo_backend_t *backend, clingo_id_t const *tuple,
                                                             size_t tuple_size, clingo_literal_t const *condition,
                                                             size_t condition_size, clingo_id_t *element_id);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_theory_atom(clingo_backend_t *backend, clingo_atom_t atom,
                                                          clingo_id_t term_id, clingo_id_t const *elements, size_t size,
                                                          clingo_atom_t *atom_id);
CLINGO_VISIBILITY_DEFAULT bool clingo_backend_theory_atom_with_guard(clingo_backend_t *backend, clingo_atom_t atom,
                                                                     clingo_id_t term_id, clingo_id_t const *elements,
                                                                     size_t size, char const *operator_name,
                                                                     clingo_id_t right_hand_side_id,
                                                                     clingo_atom_t *atom_id);
typedef struct clingo_options clingo_options_t;
CLINGO_VISIBILITY_DEFAULT bool clingo_options_add(clingo_options_t *options, char const *group, char const *option,
                                                  char const *description, bool (*parse)(char const *value, void *data),
                                                  void *data, bool multi, char const *argument);